# Copyright © 2019 Danniel Sotelo
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "stats"
version = "0.1.0"
authors = ["Danniel Sotelo <dsotelo@cs.pdx.edu>"]
edition = "2018"

[dependencies]